[package]
name = "language"
version = "0.1.0"
authors = ["stumb"]
edition = "2018"

[profile.test]
opt-level = 3
incremental = false
codegen-units = 1
overflow-checks = false

[profile.release]
debug = true
opt-level = 3
incremental = false
codegen-units = 1
overflow-checks = false
panic = 'abort'

[dependencies]
byteorder = "1.3.4"